--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-github-btn": "^1.2.2",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
